<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".Controllers.ButtonSettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginLeft="25dp">

            <ImageButton
                android:id="@+id/buttonPreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal" />
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/trash_can"
                android:background="@android:color/transparent"
                android:id="@+id/buttonRemoveImage"
                android:layout_gravity="bottom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:gravity="center_vertical"
                android:text="@string/ID" />

            <EditText
                android:id="@+id/actionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:digits="0123456789"
                android:inputType="number" />


        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">
            <TableRow
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RED"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textRed"
                    android:textAlignment="center"
                    android:text="0"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:min="0"
                    android:max="255"
                    android:layout_weight="1"
                    android:id="@+id/barRed"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GREEN"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textGreen"
                    android:textAlignment="center"
                    android:text="0"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:min="0"
                    android:max="255"
                    android:layout_weight="1"
                    android:id="@+id/barGreen"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BLUE"/>
                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textBlue"
                    android:textAlignment="center"
                    android:text="0"/>
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:min="0"
                    android:max="255"
                    android:layout_weight="1"
                    android:id="@+id/barBlue"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/Save"/>

</androidx.constraintlayout.widget.ConstraintLayout>
